...
        PackageType.MONTHLY -> 1
        PackageType.LIFETIME -> 2
        else -> 3
    }

    private fun title(type: PackageType) = when (type) {
        PackageType.ANNUAL -> "Jährlich"
        PackageType.MONTHLY -> "Monatlich"
        PackageType.LIFETIME -> "Einmalig"
        PackageType.WEEKLY -> "Wöchentlich"
        else -> "Pro"
    }

    companion object {
...
